# FocusCore

./: .cursorrules  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  batch_img_to_lvgl_c.py  common_3500_chars.txt  ds_memo_log.md  gen_lvgl_fonts.py  md_to_bin_pipeline.py  sdkconfig  sdkconfig.defaults
.claude/: settings.local.json
components/port_bsp/: CMakeLists.txt
main/: CMakeLists.txt  battery_monitor.c  battery_monitor.h  ble_memo.c  ble_memo.h  cJSON.c  cJSON.h  http_downloader.c  http_downloader.h  main.cpp  pcf85063.c  pcf85063.h  sd_card.c  sd_card.h  shtc3.c  shtc3.h  ui_font_custom.c  ui_font_date_large.c  ui_home.c  ui_home.h  ui_menu.c  ui_menu.h  user_config.h  wifi_manager.c  wifi_manager.h
ui_assets/: ui_icon_music.c  ui_icon_music_large.c  ui_icon_note.c  ui_icon_note_large.c  ui_icon_photo.c  ui_icon_photo_large.c  ui_icon_read.c  ui_icon_read_large.c  ui_icon_word.c  ui_icon_word_large.c
